1. guidaemacsauctex.sty : aggiunte delle keywords; 2. guidaemacsauctex.tex : perfezionato il paragrafo 'Ciao mondo'

--- a/guidaemacsauctex.sty
+++ b/guidaemacsauctex.sty
@@ -62,9 +62,10 @@
   colorlinks=true,%
 ]{hyperref}
 \hypersetup{%
-  pdftitle   = {Una introduzione a GNU Emacs \& AUCTeX},%
+  pdftitle   = {Guida pratica all'uso di GNU Emacs \& AUCTeX},%
   pdfauthor  = {Mosè Giordano, Orlando Iovino, Matteo Leccardi},%
   pdfsubject = {Guida tematica all'uso di GNU Emacs e AUCTeX su Windows, GNU Linux e Mac OS},%
+  pdfkeywords = {GNU, Emacs, AUCTeX, LaTeX, TeX, GuIT},%
   pdfcreator = {LaTeX},%
   linkcolor  = {blue},
   citecolor  = {blue!80!black},
