guidaemacsauctex.tex: varie

--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -810,12 +810,14 @@ mouse quando questo è posizionato sulla parola e scegliere \texttt{Save word}.
 \emacs\ gode di una infinità di combinazioni di tasti per eseguire operazioni
 banali e non. Scriverle tutte sarabbe impossibile. Va da sé che per usare \emacs
 non è necessario ricordarle tutte ma almeno le principale sì, anche se con l'uso
-quotidiano, queste ultime si memorizzano automaticamente. Le principali sono qui
-riassunte nella tabella~\ref{tab:cheat-sheet}. Pur essendo abbastanza corposa,
-la tabella comunque non ricopre tutte le possibili combinazioni. Quelle
-strettamente necessarie sono le prime. Per approfondire il discorso si possono
-anche consultare le \emph{Reference Card}, disponibili in genere nella propria
-installazione.
+quotidiano, queste ultime si memorizzano automaticamente.
+
+Le principali sono qui riassunte nella tabella~\ref{tab:cheat-sheet}. Pur
+essendo abbastanza corposa, la tabella comunque non ricopre tutte le possibili
+combinazioni. Quelle strettamente necessarie sono le prime. 
+
+Per approfondire il discorso si possono anche consultare le \emph{Reference
+  Card}, disponibili in genere nella propria cartella di installazione.
 
 \begin{longtable}{>{\ttfamily}l>{\ttfamily}lp{0.32\textwidth}}
   % intestazione iniziale
@@ -1032,7 +1034,7 @@ inizializzazione
 \end{lstlisting}
 Se si utilizza la funzione \verb!reindent-then-newline-and-indent! al posto di
 \verb!newline-and-indent! si avrà, in più, l'effetto che la riga attuale viene
-indentata.
+rientrata.
 
 \chapter{Conclusioni}
 \label{chap:fine}
@@ -1044,10 +1046,9 @@ usare il correttore ortografico.
 
 Crediamo che questo programma ed il pacchetto \auctex\ non siano così difficili
 da usare come, purtroppo, anche i più bravi guru di \LaTeX\ affermano. Forse è
-una questione di pregiudizi o di abitudini. Certo è che il tormentone
-dell'editor non finirà mai.
-
-CONTINUA
+una questione di pregiudizi o di abitudini. Non intendiamo dire che \emacs\ sia
+il miglior editor di testo, anche perché questo dipende molto dalle proprie
+abitudini. 
 
 \bibliography{guidaemacsauctex}
 
