guidaemacsauctex.tex: precisazioni

--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -634,11 +634,16 @@ configurare i principali componenti per scrivere documenti in \LaTeX\ con
 
 Su ogni sistema operativo si ha la possibilità di aprire \emacs\ a partire da un
 collegamento al programma principale. Aperto \emacs, si dovrebbe avere davanti
-la finestra principale, come in figura~\ref{fig:principale}.
+la finestra principale come in figura~\ref{fig:principale}. Nella stessa figura
+sono indicati, tra gli altri, anche il \emph{buffer}, cioè la zona di principale
+interazione con \emacs, ovvero lo spazio dove l'utente scrive, ed il
+\emph{minibuffer} dove \emacs\ scrive i comandi eseguiti di volta in volta. Il
+\emph{minibuffer} è il posto dove \emacs\ dialoga con
+l'utente~\citep{emacs:odebari}.
 
 \begin{figure}[ht]
   \centering
-  \begin{tikzpicture}\footnotesize
+  \begin{tikzpicture}\footnotesize\sffamily
     % 
     % immagine
     % 
