1. guidaemacsauctex.bib --- aggiunto record di Enrico Gregorio; 2. guidaemacsauctex.tex --- lavoro sul paragrafo 'Variabili locali' + qualche refuso;

--- a/guidaemacsauctex.bib
+++ b/guidaemacsauctex.bib
@@ -57,3 +57,11 @@
   year		= {2011},
   note		= {\url{http://william.famille-blum.org/blog/index.php}},
 }
+
+@ARTICLE{texworks:gregorio,
+  author	= {Enrico Gregorio},
+  title		= {Introduzione a {\TeX works}},
+  year		= {2011},
+  language	= {italian},
+  note          = {\url{http://profs.sci.univr.it/~gregorio/introtexworks.pdf}},
+}
