--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -91,8 +91,8 @@ controllo di versione \progstyle{git}, che si scarica dal sito
 \url{http://git-scm.com}. Chi vuole collaborare può ``clonare'' il progetto dal
 repository ufficiale presente sul sito \url{https://github.com/} alla pagina
 \url{https://github.com/GuITeX/guidaemacsauctex}. Per compilare il codice
-sorgente si consigli di munirsi di una distribuzione \LaTeX\ aggiornata. È
-inoltre necesario scaricare ed installare nel proprio albero personale la classe
+sorgente si consiglia di munirsi di una distribuzione \LaTeX\ aggiornata. È
+inoltre necessario scaricare ed installare nel proprio albero personale la classe
 \classstyle{guidatematica} disponibile alla pagina
 \url{https://github.com/GuITeX/guidatematica}.
 
@@ -101,7 +101,7 @@ refusi, commenti e suggerimenti può farlo agli indizizzi di posta elettronica
 qui riportati.
 
 \begin{tabular}{cc}
-\hspace{.32\textwidth} &                                                              \\
+\hspace{.32\textwidth} & Gli autori,                                                  \\
                        & \textsc{Mosè Giordano}                                       \\
                        & \textcolor{red}{\texttt{nome dot cognome at dominio dot it}} \\[0.5ex]
                        & \textsc{Orlando Iovino}                                      \\
@@ -643,7 +643,8 @@ aggiungere queste righe al file \filestyle{.emacs}
 Nei precedenti capitoli si è in sostanza parlato di come installare e
 configurare i principali componenti per scrivere documenti in \LaTeX\ con
 \emacs\ e \auctex. In questo capitolo vediamo ora come si scrive in \emacs\ un
-documento \filestyle{.tex} semplice e poi uno più complesso composto da più file.
+documento \filestyle{.tex} semplice, come usare il correttore ortografico.
+% e come gestire gli errori.
 
 \section{Ciao mondo}
 \label{sec:primodocumento}
@@ -762,6 +763,35 @@ In tutti e tre i casi, se \emacs\ e \auctex\ sono configurati per lavorare con
 ricerca diretta-inversa, il visualizzatore dovrebbe aprirsi sulla riga
 corrispondente del file sorgente.
 
+\section{Correzione ortografica}
+\label{sec:corr:orto:in:azione}
+
+Viste le modalità di installazione dei correttori ortografici specifichiamo in
+questo paragrafo come usarli, indipendentemente dal sistema oprativo.
+
+Per fare una revisione del documento che si sta scrivendo, bisogna premere la
+combinazione di tasti \verb!M-x! e scrivere \verb!ispell!: in questo modo il
+dizionario proporrà, in sequenza, la correzione dei termini che trova errati.
+
+Un secondo modo, per scrivere correttamente, è attivare la modalità
+\emph{flyspell} (correzione al volo). Se la si vuole attivare solo sul documento
+corrente basta andare in \menu{Tools > Spell Checking > Automatic spell checking
+  (Flyspell)}; se invece la si vuole tenere sempre abilitata si deve aggiungere
+la riga:
+\begin{lstlisting}
+(add-hook 'LaTeX-mode-hook 'flyspell-mode)
+\end{lstlisting}
+al proprio file \filestyle{.emacs}.
+
+Quando viene rilevata una parola potenzialmente non corretta, questa verrà
+colorata (in genere) in rosso. Alcuni termini, però, vengono segnalati come
+errati anche quando sono corretti, cosa che accade perché quel termine non è
+presente nel dizionario: si può aggiungerlo, premendo il tasto centrale del
+mouse quando questo è posizionato sulla parola e scegliere \texttt{Save word}.
+
+\chapter{Uso avanzato di \emacs}
+\label{chap:uso:avanzato}
+
 \section{Un documento più complesso}
 \label{sec:documento:complesso}
 
@@ -836,31 +866,6 @@ debba essere o meno un file \emph{master}, si deve scrivere
 nel file \filestyle{.emacs}, come specificato anche nel
 capitolo~\ref{chap:personal}.
 
-\section{Correzione ortografica}
-\label{sec:corr:orto:in:azione}
-
-Viste le modalità di installazione dei correttori ortografici specifichiamo in
-questo paragrafo come usarli, indipendentemente dal sistema oprativo.
-
-Per fare una revisione del documento che si sta scrivendo, bisogna premere la
-combinazione di tasti \verb!M-x! e scrivere \verb!ispell!: in questo modo il
-dizionario proporrà, in sequenza, la correzione dei termini che trova errati.
-
-Un secondo modo, per scrivere correttamente, è attivare la modalità
-\emph{flyspell} (correzione al volo). Se la si vuole attivare solo sul documento
-corrente basta andare in \menu{Tools > Spell Checking > Automatic spell checking
-  (Flyspell)}; se invece la si vuole tenere sempre abilitata si deve aggiungere
-la riga:
-\begin{lstlisting}
-(add-hook 'LaTeX-mode-hook 'flyspell-mode)
-\end{lstlisting}
-al proprio file \filestyle{.emacs}.
-
-Quando viene rilevata una parola potenzialmente non corretta, questa verrà
-colorata (in genere) in rosso. Alcuni termini, però, vengono segnalati come
-errati anche quando sono corretti, cosa che accade perché quel termine non è
-presente nel dizionario: si può aggiungerlo, premendo il tasto centrale del
-mouse quando questo è posizionato sulla parola e scegliere \texttt{Save word}.
 
 \section{Le variabili locali}
 \label{sec:variabili:locali}
