1. TODO.org : azzero il TODO perché le cose sono state tutte fatte; mancano solo gli indirizzi email; 2. guidaemacsauctex.tex : refusi

--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -461,7 +461,7 @@ Sul mirror ufficiale \url{http://ftp.gnu.org/pub/gnu/emacs/} non
 sono rese disponibili da vari volontari come ad esempio il gestore del
 sito \url{http://emacsformacosx.com/}. La
 procedura per l'installazione è quella consueta: scaricata la versione
-più recente si apre il file dmg (se non è già stato aperto
+più recente si apre il file \filestyle{.dmg} (se non è già stato aperto
 automaticamente al termine del download) e si trascina Emacs nella
 cartella Applicazioni.
 
