aggiorno time-stamp automaticamente

--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -10,7 +10,7 @@
 %% http://creativecommons.org/licenses/by-nc-sa/3.0/it
 
 \documentclass[b5paper,11pt,oneside]{guidatematica}
-\ProvidesFile{guidaemacsauctex.tex}[2013/01/08 v.0.0 Breve guida all'uso di
+\ProvidesFile{guidaemacsauctex.tex}[2013/03/06 v.0.0 Breve guida all'uso di
 Emacs per LaTeX]
 
 \usepackage{guidaemacsauctex}
@@ -1136,6 +1136,7 @@ rientrata.
 %%% coding: utf-8
 %%% TeX-master: t
 %%% fill-column: 80
+%%% time-stamp-pattern: "13/\\\\ProvidesFile{.*}\\[%:y/%02m/%02d v"
 %%% End:
 
 % LocalWords:  mirror OS For dmg Git Fast Version Control System clonare git
