--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -103,7 +103,7 @@ qui riportati.
 \begin{tabular}{cc}
 \hspace{.32\textwidth} & Gli autori,                                                  \\
                        & \textsc{Mosè Giordano}                                       \\
-                       & \textcolor{red}{\texttt{nome dot cognome at dominio dot it}} \\[0.5ex]
+                       & \texttt{giordano dot mose at libero dot it}                  \\[0.5ex]
                        & \textsc{Orlando Iovino}                                      \\
                        & \texttt{orlando dot iovino at yahoo dot it}                  \\[0.5ex]
                        & \textsc{Matteo Leccardi}                                     \\
