guidaemacsauctex.bib: aggiorno/modifico record bibliografici guidaemacsauctex.tex: correggo tabella autori

--- a/guidaemacsauctex.bib
+++ b/guidaemacsauctex.bib
@@ -14,7 +14,7 @@
 @MANUAL{emacs:stallman,
   author	= {Richard Stallman},
   title		= {GNU Emacs Manual},
-  year		= {2010},
+  year		= {2012},
   edition	= {16},
   organization	= {Free Software Foundation, Inc.},
   note		= {\url{http://www.gnu.org/software/emacs/manual/emacs.pdf}},
@@ -58,7 +58,7 @@
   note		= {\url{http://william.famille-blum.org/blog/index.php}},
 }
 
-@ARTICLE{texworks:gregorio,
+@MISC{texworks:gregorio,
   author	= {Enrico Gregorio},
   title		= {Introduzione a {\TeX works}},
   year		= {2011},
