--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -101,7 +101,7 @@ refusi, commenti e suggerimenti può farlo agli indizizzi di posta elettronica
 qui riportati.
 
 \begin{tabular}{cc}
-\hspace{.32\textwidth} & Gli autori,                                                  \\
+\hspace{.32\textwidth} & \textsc{Gli autori}                                          \\[1.5ex]
                        & \textsc{Mosè Giordano}                                       \\
                        & \texttt{giordano dot mose at libero dot it}                  \\[0.5ex]
                        & \textsc{Orlando Iovino}                                      \\
