guidaemacsauctex.tex: recisazione su AUCTeX

--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -57,9 +57,10 @@ Emacs è uno dei più vecchi e potenti editor di testo in circolazione e può
 vantare fra i suoi utenti Donald Knuth --- l'inventore di \TeX{} ---, e Laslie
 Lamport --- l'autore di \LaTeX.
 
-\auctex\ è invece un pacchetto per \emacs\ che estende notevolmente le
-funzionalità di \emacs\ per scrivere documenti in \LaTeX\ ed in altri formati
-legati al programma di tipocomposizione \TeX.
+\auctex\ è invece un pacchetto per \emacs\ scritto interamente in linguaggio
+Emacs Lisp, che estende notevolmente le funzionalità di \emacs\ per scrivere
+documenti in \LaTeX\ ed in altri formati legati al programma di tipocomposizione
+\TeX.
 % Fonti per Donald Knuth:
 % https://www.informit.com/articles/article.aspx?p=1193856
 % http://tex.loria.fr/litte/knuth-interview
