guidaemacsauctex.tex: repository -> deposito

--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -90,7 +90,7 @@ non è poi così complicato come spesso viene indicato.
 Questa guida tematica è stata scritta a \emph{sei mani} grazie al sistema di
 controllo di versione \progstyle{git}, che si scarica dal sito
 \url{http://git-scm.com}. Chi vuole collaborare può ``clonare'' il progetto dal
-repository ufficiale presente sul sito \url{https://github.com/} alla pagina
+deposito ufficiale presente sul sito \url{https://github.com/} alla pagina
 \url{https://github.com/GuITeX/guidaemacsauctex}. Per compilare il codice
 sorgente si consiglia di munirsi di una distribuzione \LaTeX\ aggiornata. È
 inoltre necessario scaricare ed installare nel proprio albero personale la classe
@@ -416,7 +416,7 @@ $ sudo zypper install emacs-auctex
 \end{lstlisting}
 
 Su Debian e Ubuntu potrebbe essere raccomandata l'installazione della
-distribuzione TeX Live presente nei repository ufficiali del sistema operativo.
+distribuzione TeX Live presente nei depositi ufficiali del sistema operativo.
 Per evitare che questo avvenga, per esempio perché si utilizza una distribuzione
 TeX Live installata in altro modo, se si installa il pacchetto da terminale è
 sufficiente aggiungere l'opzione \verb!--no-install-recommends!
