--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -6,8 +6,8 @@
 %%  + Condividi allo stesso modo
 %% 3.0 Italia.
 %%
-%% Il testo è disponibile alla pagina Internet
-%% http://creativecommons.org/licenses/by-nc-sa/3.0/it
+%% Un riassunto in linguaggio accessibile a tutti della licenza è disponibile
+%% alla pagina Internet http://creativecommons.org/licenses/by-nc-sa/3.0/it
 
 \documentclass[b5paper,11pt,oneside]{guidatematica}
 \ProvidesFile{guidaemacsauctex.tex}[2013/03/06 v.0.0 Breve guida all'uso di
@@ -30,8 +30,9 @@ Emacs per LaTeX]
 
 Quest'opera è soggetta alla Creative Commons Public License versione 3.0 o
 posteriore: \emph{Attribuzione}, \emph{Non Commerciale}, \emph{Condividi allo
-  stesso modo}. L'enunciato integrale della licenza è reperibile sul sito
-ufficiale \url{http://creativecommons.org/licenses/by-nc-sa/3.0/deed.it}.
+  stesso modo}. Un riassunto in linguaggio accessibile a tutti licenza è
+reperibile sul sito ufficiale
+\url{http://creativecommons.org/licenses/by-nc-sa/3.0/deed.it}.
 
 \bigskip\noindent\textsc{tu sei libero:}
 \begin{itemize}
