--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -103,13 +103,13 @@ refusi, commenti e suggerimenti può farlo agli indizizzi di posta elettronica
 qui riportati.
 
 \begin{tabular}{cc}
-\hspace{.32\textwidth} & \textsc{Gli autori}                                          \\[1.5ex]
-                       & \textsc{Mosè Giordano}                                       \\
-                       & \texttt{giordano dot mose at libero dot it}                  \\[0.5ex]
-                       & \textsc{Orlando Iovino}                                      \\
-                       & \texttt{orlando dot iovino at yahoo dot it}                  \\[0.5ex]
-                       & \textsc{Matteo Leccardi}                                     \\
-                       & \textcolor{red}{\texttt{nome dot cognome at dominio dot it}} \\
+\hspace{.32\textwidth} & \textsc{Gli autori}                           \\[1.5ex]
+                       & \textsc{Mosè Giordano}                        \\
+                       & \texttt{giordano dot mose at libero dot it}   \\[0.5ex]
+                       & \textsc{Orlando Iovino}                       \\
+                       & \texttt{orlando dot iovino at yahoo dot it}   \\[0.5ex]
+                       & \textsc{Matteo Leccardi}                      \\
+                       & \texttt{matteo dot leccardi at gmail dot com} \\
 \end{tabular}
 
 \newpage\tableofcontents*
