guidaemacsauctex.tex: precisazione sul file .emacs

--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -184,10 +184,9 @@ posti a seconda del sistema operativo, in particolare
       \item \verb|C:\Users\|\meta{nome utente}\verb|\AppData\.emacs.d\init.el|
             da Vista in avanti;
       \end{itemize}
-\item Su GNU/Linux si chiama \filestyle{.emacs} o \filestyle{init.el} e va
-      posizionato in \verb|~/.emacs|, \verb|~/.emacs.el| oppure
+\item Su GNU/Linux e Mac OS si chiama \filestyle{.emacs} o \filestyle{init.el} e
+      va posizionato in \verb|~/.emacs|, \verb|~/.emacs.el| oppure
       \verb|~/.emacs.d/init.el|;
-\item Su MAC OS \textcolor{red}{[\ldots]}
 \end{itemize}
 Nel seguito ci riferiremo spesso al file di inizializzazione chiamandolo
 semplicemente \verb|.emacs|, indipendentemente dalla posizione in cui si trova e
