guidaemacsauctex.sty: aggiungo la variabile time-stamp

--- a/guidaemacsauctex.sty
+++ b/guidaemacsauctex.sty
@@ -93,4 +93,5 @@
 %%% Local Variables:
 %%% mode: latex
 %%% coding: utf-8
+%%% time-stamp-pattern: "13/\\\\ProvidesFile{.*}\\[%:y/%02m/%02d v"
 %%% End:
