--- a/guidaemacsauctex.sty
+++ b/guidaemacsauctex.sty
@@ -10,7 +10,7 @@
 %% alla pagina Internet http://creativecommons.org/licenses/by-nc-sa/3.0/it
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{guidaemacsauctex}[2013/03/02 v0.0 Preambolo di guidaemacsauctex.tex]
+\ProvidesPackage{guidaemacsauctex}[2013/03/07 v.1.0 Preambolo di guidaemacsauctex.tex]
 
 \RequirePackage{ccicons}
 \RequirePackage{booktabs}
