correggo variabile `time-stamp-pattern' in *.sty

--- a/guidaemacsauctex.sty
+++ b/guidaemacsauctex.sty
@@ -10,7 +10,7 @@
 %% alla pagina Internet http://creativecommons.org/licenses/by-nc-sa/3.0/it
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{guidaemacsauctex}[2013/03/07 v.1.0 Preambolo di guidaemacsauctex.tex]
+\ProvidesPackage{guidaemacsauctex}[2013/03/08 v.1.0 Preambolo di guidaemacsauctex.tex]
 
 \RequirePackage{ccicons}
 \RequirePackage{booktabs}
@@ -93,5 +93,5 @@
 %%% Local Variables:
 %%% mode: latex
 %%% coding: utf-8
-%%% time-stamp-pattern: "13/\\\\ProvidesFile{.*}\\[%:y/%02m/%02d v"
+%%% time-stamp-pattern: "13/\\\\ProvidesPackage{.*}\\[%:y/%02m/%02d v"
 %%% End:
